# fake-object

./: fake-object.cabal  fake-objects.cabal
src/Carma/: Dictionaries.hs
src/Fake/: Dictionary.hs  Object.hs
src/Fake/Object/: Aeson.hs  DDL.hs  Internals.hs
src/Fake/Object/Internals/: Bag.hs  Field.hs  Ident.hs  Object.hs  Untyped.hs
