
name:                fake-object
version:             0.1.0.0
synopsis:            Object model definition
-- description:
homepage:            https://github.com/f-me/fake-object
license:             MIT
license-file:        LICENSE
author:              max taldykin
maintainer:          max@formalmethods.ru
-- copyright:
category:            Data
build-type:          Simple
cabal-version:       >=1.8

library
  hs-source-dirs:    src
  exposed-modules:   Fake.Object,
                     Fake.Dictionary,
                     Fake.Object.Internals,
                     Fake.Object.Aeson,
                     Carma.Dictionaries
  -- other-modules:
  build-depends:     base,
                     containers == 0.5.0.0,
                     unordered-containers,
                     lens, aeson,
                     text

  extensions:
    DataKinds, EmptyDataDecls,
    TypeFamilies,
    DeriveDataTypeable, GeneralizedNewtypeDeriving, StandaloneDeriving,
    MultiParamTypeClasses, FlexibleInstances, FlexibleContexts
