
name:                fake-object
version:             0.1.0.0
synopsis:            Object model definition
-- description:
homepage:            https://github.com/f-me/fake-object
license:             MIT
license-file:        LICENSE
author:              max taldykin
maintainer:          max@formalmethods.ru
-- copyright:
category:            Data
build-type:          Simple
cabal-version:       >=1.8

library
  hs-source-dirs:    src
  exposed-modules:
                     Fake.Object,
                     -- Fake.Dictionary,
                     Fake.Object.Aeson,
                     Fake.Object.DDL,
                     Carma.Dictionaries
  other-modules:
                     Fake.Object.Internals.Untyped,
                     Fake.Object.Internals.Field,
                     Fake.Object.Internals.Bag,
                     Fake.Object.Internals.Object,
                     Fake.Object.Internals.Ident

  build-depends:     base,
                     containers == 0.5.0.0,
                     unordered-containers,
                     lens, aeson,
                     text

  extensions:
    DataKinds, KindSignatures, TypeOperators,
    TypeFamilies,
    DeriveDataTypeable, StandaloneDeriving,
    MultiParamTypeClasses, FlexibleInstances, FlexibleContexts
